--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -20,7 +20,7 @@ main {
     max-width: 100vw;
 }
 
-main.is-open .text {
+.text.is-open {
     max-height: 60vh;
     overflow-y: auto;
     display: flex;
